examples/test/testpolicy3274.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3274
  namespace: namespace250
spec:
  podSelector:
    matchLabels:
      key31: value36
      key46: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value10
          key19: value4
          key29: value46
      podSelector:
        matchLabels:
          key42: value29
          key5: value2
